--- a/project_1/client/index.html
+++ b/project_1/client/index.html
@@ -58,6 +58,12 @@
         <tfoot>
         </tfoot>
     </table>
-    <script src="js/index.js"></script>
+    <script src="js/app/models/Deal.js"></script>
+    <script>
+
+        var d2 = new Deal(new Date(), 10, 2.2);
+        d2.setDate(new Date());
+        console.log(d2);
+    </script>
 </body>
 </html>
