--- a/project_1/client/index.html
+++ b/project_1/client/index.html
@@ -61,9 +61,9 @@
     <script src="js/app/models/Deal.js"></script>
     <script>
 
-        var d2 = new Deal(new Date(), 10, 2.2);
-        d2.setDate(new Date());
+        let d2 = new Deal(new Date(), parseInt("10"), 2.2);
         console.log(d2);
+        console.log(d2.volume);
     </script>
 </body>
 </html>
